tests/reference/asr-test_str_slicing2-2f07e9a.stderr
semantic error: slice indices must be integers or None
 --> tests/errors/test_str_slicing2.py:4:13
  |
4 |     print(s[1.5:3])
  |             ^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
